--- a/all/node-mysql-advanced/node-mysql-typeorm/.env
+++ b/all/node-mysql-advanced/node-mysql-typeorm/.env
@@ -1,6 +1,6 @@
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
-MYSQL_DB_NAME=store
+MYSQL_DB_NAME=super
 MYSQL_USERNAME=root
 MYSQL_PASSWORD=root
 APP_PORT=8080
