--- a/all/node-mysql-advanced/node-mysql-typeorm/package.json
+++ b/all/node-mysql-advanced/node-mysql-typeorm/package.json
@@ -12,6 +12,7 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "mysql": "^2.14.1",
