--- a/all/node-mysql-advanced/node-mysql-typeorm/package.json
+++ b/all/node-mysql-advanced/node-mysql-typeorm/package.json
@@ -12,9 +12,11 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "body-parser": "^1.20.2",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
+      "multer": "^1.4.5-lts.1",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.11"
