--- a/all/frontsuper/package.json
+++ b/all/frontsuper/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "buffer-to-data-url": "^1.0.0",
+    "fs": "^0.0.1-security",
+    "jimp": "^0.22.10",
     "next": "13.4.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -19,6 +22,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.44.3"
+    "react-hook-form": "^7.44.3",
+    "sharp": "^0.32.4"
   }
 }
