--- a/all/frontsuper/package.json
+++ b/all/frontsuper/package.json
@@ -23,6 +23,8 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.3",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "sharp": "^0.32.4"
   }
 }
