--- a/all/node-mysql-advanced/node-mysql-typeorm/package.json
+++ b/all/node-mysql-advanced/node-mysql-typeorm/package.json
@@ -18,8 +18,9 @@
       "express": "^4.18.2",
       "multer": "^1.4.5-lts.1",
       "mysql": "^2.14.1",
+      "pg": "^8.11.3",
       "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.11"
+      "typeorm": "^0.3.11"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
